[project]
name = "pycalendar"
version = "0.1.0"
description = ""
authors = [
    {name = "Krystof2so",email = "christo.2so@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "pyside6 (==6.9.0)",
    "pyside6-addons (==6.9.0)",
    "pyside6-essentials (==6.9.0)",
    "shiboken6 (==6.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
